view profile alignment fix

--- a/src/components/Mentor.css
+++ b/src/components/Mentor.css
@@ -74,6 +74,11 @@
   margin-left: 10%;
   margin-bottom: 2.5%;
 }
+.viewProfile {
+  margin-top: 2%;
+  margin-left: 2%;
+  margin-bottom: 2.5%;
+}
 
 .profileMentee {
   margin-left: 20px;
